added start page

--- a/index.html
+++ b/index.html
@@ -14,7 +14,16 @@
 </head>
 
 <body>
-    
+    <div class="inside-container">
+        <div class="start">
+            <div class="daily">daily</div>
+            <div class="todo">TODO list</div>
+            <div class="line1">plan your day already!</div>
+            <div class="line2">add today's schedule right now!</div>
+            <div class="add-btn"><button>start</button></div>
+        </div>
+
+    </div>
 
 
     <script src="./script.js"></script>
