added layout of add-to-list

--- a/index.html
+++ b/index.html
@@ -23,6 +23,17 @@
             <div class="add-btn"><button>start</button></div>
         </div>
 
+        <div class="add-to-list">
+            <div class="ins">add your tasks:</div>
+            <div class="add-tasks">
+
+            </div>
+            <div class="hint">
+                <div>🟢low</div>
+                <div>🟡medium</div>
+                <div>🔴high</div>
+            </div>
+        </div>
     </div>
 
 
