--- a/index.html
+++ b/index.html
@@ -26,12 +26,31 @@
         <div class="add-to-list">
             <div class="ins">add your tasks:</div>
             <div class="add-tasks">
-
+                <!-- <div class="added-task">
+                    <div class="added-priority">🟢</div>
+                    <div class="added-name">dflkshjfk</div>
+                </div> -->
+                <div class="blank">
+                    <div class="text"><input type="text" name="task-name" placeholder="type here..."></div>
+                    <div class="priority">
+                        <select name="priority-select">
+                            <option value="low">🟢</option>
+                            <option value="medium">🟡</option>
+                            <option value="high">🔴</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="plus-btn">
+                    <img src="./plus.svg" alt="">
+                </div>
+            </div>
+            <div class="done-btn">
+                <button>done</button>
             </div>
             <div class="hint">
-                <div>🟢low</div>
-                <div>🟡medium</div>
-                <div>🔴high</div>
+                <div>🟢 low</div>
+                <div>🟡 medium</div>
+                <div>🔴 high</div>
             </div>
         </div>
     </div>
