added successful page

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 
     <div class="inside-container">
-        <div class="start">
+        <div class="start hide">
             <div class="daily">daily</div>
             <div class="todo">TODO list</div>
             <div class="line1">plan your day already!</div>
@@ -59,6 +59,22 @@
                 <div>🟢 low</div>
                 <div>🟡 medium</div>
                 <div>🔴 high</div>
+            </div>
+        </div>
+
+        <div class="successful hide">
+            <div class="a"> your day is planned </div>
+            <div class="b">successfully!!</div>
+            <div class="view-btn">
+                <button>view your day</button>
+            </div>
+        </div>
+
+        <div class="todo-list">
+            <div class="lline1">your today's</div>
+            <div class="lline2">schedule</div>
+            <div class="list-container">
+                
             </div>
         </div>
     </div>
