added final view list

--- a/index.html
+++ b/index.html
@@ -70,11 +70,20 @@
             </div>
         </div>
 
-        <div class="todo-list">
-            <div class="lline1">your today's</div>
-            <div class="lline2">schedule</div>
+        <div class="todo-list hide">
+            <div class="lline">
+                <div class="lline1">your today's</div>
+                <div class="lline1"><u>schedule</u></div>
+            </div>
             <div class="list-container">
-                
+                <!-- <div class="todo-task">
+                    <div class="added-priority">🟢</div>
+                    <div class="added-name">dflkshjfk</div>
+                </div>
+                <div class="todo-task">
+                    <div class="added-priority">🟢</div>
+                    <div class="added-name">dflkshjfk</div>
+                </div> -->
             </div>
         </div>
     </div>
