--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                         </select>
                     </div>
                 </div>
+                <div class="warning">task can't be empty!</div>
                 <div class="plus-btn">
                     <img src="./plus.svg" alt="">
                 </div>
